chore: Update package dependencies to fixed versions; clean up Sidebar and Layout components; enhance requisitos page functionality

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -41,17 +41,17 @@ const { title } = Astro.props;
           </div>
 
           <div class="hidden md:flex items-center space-x-4">
-            <!-- <a
-              href="/"
-              class="text-gray-900 hover:text-blue-600 px-3 py-2 rounded-md text-sm font-medium"
+            <a
+              href="/login"
+              class="text-gray-900 hover:text-blue-600 border border-gray-900 hover:border-blue-600 px-3 py-2 rounded-md text-sm font-medium"
             >
-              Inicio
-            </a> -->
+              Login
+            </a>
 
             <a
               href="https://ecommerce-demo.com"
               target="_blank"
-              class="bg-blue-600 text-white px-4 py-2 rounded-md text-sm font-medium hover:bg-gray-800"
+              class="bg-blue-600 border-blue-600 hover:border-gray-800 border text-white px-4 py-2 rounded-md text-sm font-medium hover:bg-gray-800"
             >
               Demo
             </a>
